# presse

./: .gitignore  Cargo.toml  README.md  benchmark.sh  demo.tape  dist-workspace.toml  reddit.txt
.github/workflows/: release.yml
demo/: demo.tape
src/: README.md  lib.rs  macros.rs  main.rs
src/cli/: args.rs
src/pdf/: builder.rs  images.rs  merger.rs  mod.rs  reader.rs  writer.rs
