[package]
name = "presse"
version = "0.1.0"
edition = "2024"
description = "Fast PDF compression CLI — JPEG recompression and structural optimization"
license = "GPL-3.0"
repository = "https://github.com/SimonBure/presse"

[dependencies]
# PDF manipulation
lopdf = "0.39.0"

# CLI
clap = { version = "4", features = ["derive"] }

# Progress bar
indicatif = "0.17"
image = "0.25.9"
